[gd_scene load_steps=7 format=3 uid="uid://c2qy1tvkaexvn"]

[ext_resource type="Script" path="res://Enemies/enemy.gd" id="1_7ywgq"]
[ext_resource type="Texture2D" uid="uid://bn2r8qqsif2vg" path="res://World/Objects/Bush.png" id="2_2b1y5"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_g1yc7"]
radius = 14.0
height = 28.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_a86kt"]
radius = 3.0
height = 16.0

[sub_resource type="CircleShape2D" id="CircleShape2D_njycr"]
radius = 135.004

[sub_resource type="CircleShape2D" id="CircleShape2D_4xfwf"]
radius = 81.0555

[node name="Enemy" type="CharacterBody2D" groups=["kill"]]
collision_layer = 8
collision_mask = 15
script = ExtResource("1_7ywgq")

[node name="Bush" type="Sprite2D" parent="." groups=["kill"]]
position = Vector2(0, -4)
texture = ExtResource("2_2b1y5")

[node name="Hurtbox" type="Area2D" parent="." groups=["kill"]]
position = Vector2(0, 1)
rotation = 1.5708
collision_layer = 8
collision_mask = 8
input_pickable = false
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox" groups=["kill"]]
position = Vector2(-5, 2.38419e-07)
shape = SubResource("CapsuleShape2D_g1yc7")

[node name="Hitbox" type="CollisionShape2D" parent="." groups=["kill"]]
y_sort_enabled = true
position = Vector2(0, 1)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_a86kt")

[node name="Node2D" type="Node2D" parent="."]

[node name="DeAggro" type="Area2D" parent="Node2D"]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/DeAggro" groups=["kill"]]
shape = SubResource("CircleShape2D_njycr")

[node name="AggroRange" type="Area2D" parent="Node2D"]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/AggroRange" groups=["kill"]]
shape = SubResource("CircleShape2D_4xfwf")

[node name="Navigation" type="Node2D" parent="."]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="Navigation"]
path_postprocessing = 1
avoidance_enabled = true
debug_enabled = true

[node name="Recalculate" type="Timer" parent="Navigation"]
wait_time = 0.1
autostart = true

[node name="RayCast2D" type="RayCast2D" parent="."]
collision_mask = 3
collide_with_areas = true

[connection signal="area_exited" from="Node2D/DeAggro" to="." method="_on_de_aggro_area_exited"]
[connection signal="area_entered" from="Node2D/AggroRange" to="." method="_on_aggro_range_area_entered"]
[connection signal="velocity_computed" from="Navigation/NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="timeout" from="Navigation/Recalculate" to="." method="_on_recalculate_timeout"]
